Fixed Header. Ultimately I went with the bootstrap one since it works well with login button and collapses correctly. I liked the look of mine better, and the html/css is still there (very simple stuff). Figured out why things didn't look right on mobile, needed the meta tag in head - <meta name="viewport" content="width=device-width, initial-scale=1"> Added a way to add new focuses. It's kind of the trello way rather than the medium or chains way. Medium would just be the one button, which I have so you can use that instead if you want. Chains has a sideways chain, but it wouldn't work with mobile.

--- a/client/sass/home.scss
+++ b/client/sass/home.scss
@@ -21,7 +21,7 @@ $headerHeight: 40px;
 *, :before, :after { @include box-sizing(border-box) }
 
 #main-region {
-  padding-top: $headerHeight;
+  padding-top: 70px;
 }
 
 // HEADER
@@ -57,7 +57,7 @@ header {
   margin-left: 10px;
   list-style-type: none;
   font-size: 20px;
-  display: inline-block;
+  // display: inline-block;
 
   &:hover {
     color: #428bca;
@@ -74,13 +74,18 @@ header {
   }
 }
 
+// New Focus Butto in header
+.new-focus {
+  cursor: pointer;
+}
+
 // New Focus
 button.new-focus {
   color: #fff;
   float: right;
   position: relative;
   background-color: black;
-  margin-top: 8px;
+  margin-top: -20px;
   margin-right: 5px;
   font-size: 20px;
   border: none;
